@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_utl.c,v 1.794 2013-06-23 05:39:34 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_utl.c,v 1.795 2013-06-23 06:32:55 pvicente Exp $ */
 
 /* Purpose: Group utilities */
 
@@ -5180,17 +5180,13 @@ nco_var_dmn_rdr_mtd_trv               /* [fnc] Determine and set new dimensional
  var_sct **var_prc_out,               /* I/O [sct] Processed variables */
  const int nbr_var_fix,               /* I [nbr] Number of processed variables */
  var_sct **var_fix,                   /* I/O [sct] Processed variables */
- dmn_sct **dmn_out,                   /* I/O [sct] Output dimension structures */
  dmn_sct **dmn_rdr,                   /* I [sct] Dimension structures to be re-ordered */
  const int dmn_rdr_nbr,               /* I [nbr] Number of dimension to re-order */
- const nco_bool *dmn_rvr_rdr,         /* I [flg] Reverse dimension */
- int dmn_out_idx_rec_in)              /* I [idx] Record dimension index in output dimension list, original */
+ const nco_bool *dmn_rvr_rdr)         /* I [flg] Reverse dimension */
 {
   /* Purpose: Determine and set new dimensionality in metadata of each re-ordered variable */
 
   /* Based in nco_var_dmn_rdr_mtd(). LIMITATION: the first record dimension for the object variable is used */
-
-  /* ASSUMPTIONS: dmn_out_idx_rec_in matches the order of the record dimension in variable object */
 
   const char fnc_nm[]="nco_var_dmn_rdr_mtd_trv()"; /* [sng] Function name */
 
@@ -5263,7 +5259,7 @@ nco_var_dmn_rdr_mtd_trv               /* [fnc] Determine and set new dimensional
               rec_dmn_nm_out=rec_dmn_nm_out_crr;
               /* ...and set new and un-set old record dimensions... */
               var_prc_out[idx_var_prc]->dim[0]->is_rec_dmn=True;
-              dmn_out[dmn_out_idx_rec_in]->is_rec_dmn=False;
+
               /* ...and set flag that record dimension has been re-defined... */
               REDEFINED_RECORD_DIMENSION=True;
 
