@@ -1,3 +1,9 @@
+2013-06-17 Pedro Vicente  <pvicente@uci.edu>
+
+	* nco_var_dmn_rdr_mtd_trv() Determine and set new dimensionality in metadata of each re-ordered variable
+
+	* nco_var_dmn_rdr_val_trv() Change dimension ordering of variable values 
+
 2013-06-22 Pedro Vicente  <pvicente@uci.edu>
 
 	* Add ncpdq test #24 Reverse/Re-order 4D variable -a lev,time,-lon,-lat -v four_dmn_rec_var (MSA)
